# agent-radio-oss

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSES.md  NOTICE  README.md  oss-mvp-sprint.md  pyproject.toml
.github/workflows/: ci.yml
config/: radio.example.yaml
docs/: AGENT_HARNESS.md
docs/hardware/: README.md  amd-rocm.md  apple-silicon.md  cpu.md  nvidia-cuda.md
docs/investigations/: kokoro-amd-rocm.md
scripts/: download-models.sh  oss-smoke.sh  setup-amd.sh  setup-cpu.sh  setup-cuda.sh  setup-mac.sh
scripts/lib/: common.sh
skills/broadcast/: SKILL.md
skills/broadcast/scripts/: broadcast.py
skills/check-quality/: SKILL.md
skills/check-quality/scripts/: check.py
skills/edit-script/: SKILL.md
skills/edit-script/scripts/: check-anomalies.py  edit-segment.py
skills/gather-news/: SKILL.md
skills/gather-news/scripts/: gather.py
skills/publish-episode/: SKILL.md
skills/publish-episode/scripts/: publish.py
skills/render-episode/: SKILL.md
skills/render-episode/scripts/: render.py
skills/run-station/: SKILL.md
skills/run-station/scripts/: loop.py
src/: anomaly.py  config.py  curator.py  distributor.py  dsp.py  editor.py  editorial.py  episode_history.py  library.py  mixer.py  music.py  paths.py  pipeline.py  podcast.py  publisher.py  quality.py  renderer.py  script_quality.py  secrets.py  segment_cache.py  show_palette.py  stream.py  stt.py
src/cli/: __init__.py  _output.py  config_cmd.py  demo_cmd.py  distribute_cmd.py  edit_cmd.py  library_cmd.py  publish_cmd.py  render_cmd.py  run_cmd.py  soundbooth_cmd.py  stream_cmd.py
src/engines/: __init__.py  kokoro.py
tests/: conftest.py  shell_harness.py  test_anomaly.py  test_cli.py  test_cli_demo.py  test_cli_edit.py  test_cli_publish.py  test_config.py  test_curator.py  test_dsp.py  test_editor.py  test_engines.py  test_episode_history.py  test_library.py  test_mixer.py  test_music.py  test_paths.py  test_pipeline_library.py  test_podcast.py  test_publisher.py  test_quality.py  test_renderer.py  test_script_quality.py  test_secrets.py  test_segment_cache.py  test_setup_scripts.py  test_show_palette.py  test_stream.py  test_stt.py
voices/: kokoro-adam.yaml  kokoro-bella.yaml  kokoro-michael.yaml
